Create design for smaller devices. Add alt text for images.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,6 +12,8 @@
 </head>
 <body>
     <div class="container">
+
+        <!-- Title part of the page with Udacity logo and persons name -->
         <header>
            <a href="https://eu.udacity.com/">
               <img class="udacity-symbol" src="images/udacity.png" alt="Udacity symbol letter U">  
@@ -21,25 +23,29 @@
               <p>Front-end developer</p>    
            </div>
            <hr class="line">
-        </header>   
+        </header> 
+
+        <!-- Bigest image with the code -->  
         <section>
            <img class="code-pic" src="https://fthmb.tqn.com/P7uU1uXj8SNTZNWaYJanxEZYixI=/768x0/filters:no_upscale()/GettyImages-182798262-57dc02755f9b58651672354f.jpg" alt="Image with HTML code">
         </section>
+
+        <!-- 3 smaller images with the links to the other projects -->
         <section>
            <h2 class="project-section-title">Featured work</h2>
            <div class="project-pic">
               <div class="project">
-                 <img src="images/santa-site.png">
+                 <img src="images/santa-site.png" alt="Image from project of Santa claus web site">
                  <h3 class="project-title">Santa site</h3>
                  <a class="project-link" href="https://github.com/Ditiite/-code-challenge---11.12 " target="_blank">https://github.com/Ditiite/-code-challenge---11.12</a>
               </div>
               <div class="project">
-                 <img src="images/pixel.png">
+                 <img src="images/pixel.png" alt="Image from Pixel art macker project site">
                  <h3 class="project-title">Pixel Art Macker</h3>
                  <a class="project-link" href="https://github.com/Ditiite/Pixel-Art-Macker" target="_blank">https://github.com/Ditiite/Pixel-Art-Macker</a>
               </div>
               <div class="project">
-                 <img src="images/shopping-cart.png">
+                 <img src="images/shopping-cart.png" alt="Image from project of creating shopping cart">
                  <h3 class="project-title">Shopping cart</h3>
                  <a class="project-link" href="https://github.com/Ditiite/shopping-cart" target="_blank">https://github.com/Ditiite/shopping-cart</a>
               </div>
