--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css"> 
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
     <title>Portfolio Site Dita Rahmane</title>
 </head>
@@ -15,45 +16,69 @@
 
         <!-- Title part of the page with Udacity logo and persons name -->
         <header>
-           <a href="https://eu.udacity.com/">
-              <img class="udacity-symbol" src="images/udacity.png" alt="Udacity symbol letter U">  
-           </a>
-           <div class="name">
-              <h1>Dita Rahmane</h1>
-              <p>Front-end developer</p>    
-           </div>
-           <hr class="line">
+            <a href="https://eu.udacity.com/">
+                <img class="udacity-symbol" src="images/udacity.png" alt="Udacity symbol letter U">  
+            </a>
+            <div class="name">
+                <h1>Dita Rahmane</h1>
+                <p>Front-end developer</p>    
+            </div>
+            <hr class="line">
         </header> 
 
         <!-- Bigest image with the code -->  
-        <section>
+        <div>
            <img class="code-pic" src="https://fthmb.tqn.com/P7uU1uXj8SNTZNWaYJanxEZYixI=/768x0/filters:no_upscale()/GettyImages-182798262-57dc02755f9b58651672354f.jpg" alt="Image with HTML code">
-        </section>
+        </div>
 
         <!-- 3 smaller images with the links to the other projects -->
         <section>
-           <h2 class="project-section-title">Featured work</h2>
-           <div class="project-pic">
-              <div class="project">
-                 <img src="images/santa-site.png" alt="Image from project of Santa claus web site">
-                 <h3 class="project-title">Santa site</h3>
-                 <a class="project-link" href="https://github.com/Ditiite/-code-challenge---11.12 " target="_blank">https://github.com/Ditiite/-code-challenge---11.12</a>
-              </div>
-              <div class="project">
-                 <img src="images/pixel.png" alt="Image from Pixel art macker project site">
-                 <h3 class="project-title">Pixel Art Macker</h3>
-                 <a class="project-link" href="https://github.com/Ditiite/Pixel-Art-Macker" target="_blank">https://github.com/Ditiite/Pixel-Art-Macker</a>
-              </div>
-              <div class="project">
-                 <img src="images/shopping-cart.png" alt="Image from project of creating shopping cart">
-                 <h3 class="project-title">Shopping cart</h3>
-                 <a class="project-link" href="https://github.com/Ditiite/shopping-cart" target="_blank">https://github.com/Ditiite/shopping-cart</a>
-              </div>
-           </div>
+            <h2 class="project-section-title">Featured work</h2>
+            <div class="project-pic">
+                <div class="project">
+                <a class="project-link" href="https://github.com/Ditiite/-code-challenge---11.12 " target="_blank">
+                    <img src="images/santa-site.png" alt="Image from project of Santa claus web site">
+                    <h3 class="project-title">Santa site</h3>
+                </a>
+                </div>
+                <div class="project">
+                <a class="project-link" href="https://github.com/Ditiite/Pixel-Art-Macker" target="_blank">
+                    <img src="images/pixel.png" alt="Image from Pixel art macker project site">
+                    <h3 class="project-title">Pixel Art Macker</h3>
+                </a>
+                </div>
+                <div class="project">
+                <a class="project-link" href="https://github.com/Ditiite/shopping-cart" target="_blank">
+                    <img src="images/shopping-cart.png" alt="Image from project of creating shopping cart">
+                    <h3 class="project-title">Shopping cart</h3>
+                </a>
+                </div>
+            </div>
         </section>
-        <footer>
-           
+        <hr class="line">
+        <footer class="footer-flex">           
+            <div class="footer-div">
+                <p>Design given by Udacity</p>
+                <p>Created by Dita</p>
+            </div>           
+            <div class="footer-div social-media">
+                <a href="https://www.facebook.com" target="_blank">
+                    <i class="fa fa-facebook fa-3x" aria-hidden="true"></i>
+                </a>
+                <a href="https://twitter.com/?lang=en" target="_blank">
+                    <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
+                </a>
+                <a href="https://github.com" target="_blank" >
+                    <i class="fa fa-github fa-3x" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.linkedin.com/uas/login" target="_blank">
+                    <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
+                </a>
+                <a href="https://www.instagram.com" target="_blank">
+                    <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+                </a>
+            </div>
         </footer>
-     </div>
+    </div>
 </body>
 </html>
