Removed Bootstrap framwork. Change .fa element color. Change @media Udacity symbol size. Remove <hr> tag added border-bottom.

--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css"> 
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-
     <title>Portfolio Site Dita Rahmane</title>
 </head>
 <body>
-    <div class="container">
+    <main class="container">
 
         <!-- Title part of the page with Udacity logo and persons name -->
-        <header>
+        <header class="border-down">
             <a href="https://eu.udacity.com/">
                 <img class="udacity-symbol" src="images/udacity.png" alt="Udacity symbol letter U">  
             </a>
@@ -23,7 +21,6 @@
                 <h1>Dita Rahmane</h1>
                 <p>Front-end developer</p>    
             </div>
-            <hr class="line">
         </header> 
 
         <!-- Bigest image with the code -->  
@@ -32,7 +29,7 @@
         </div>
 
         <!-- 3 smaller images with the links to the other projects -->
-        <section>
+        <section class="border-down">
             <h2 class="project-section-title">Featured work</h2>
             <div class="project-pic">
                 <div class="project">
@@ -55,7 +52,7 @@
                 </div>
             </div>
         </section>
-        <hr class="line">
+        
         <footer class="footer-flex">           
             <div class="footer-div">
                 <p>Design given by Udacity</p>
@@ -79,6 +76,6 @@
                 </a>
             </div>
         </footer>
-    </div>
+    </main>
 </body>
 </html>
