Add text for projects

--- a/index.html
+++ b/index.html
@@ -37,18 +37,21 @@
                 <a class="project-link" href="https://github.com/Ditiite/-code-challenge---11.12 " target="_blank">
                     <img src="images/santa-site.png" alt="Image from project of Santa claus web site">
                     <h3 class="project-title">Santa site</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </a>
                 </div>
                 <div class="project">
                 <a class="project-link" href="https://github.com/Ditiite/Pixel-Art-Macker" target="_blank">
                     <img src="images/pixel.png" alt="Image from Pixel art macker project site">
                     <h3 class="project-title">Pixel Art Macker</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </a>
                 </div>
                 <div class="project">
                 <a class="project-link" href="https://github.com/Ditiite/shopping-cart" target="_blank">
                     <img src="images/shopping-cart.png" alt="Image from project of creating shopping cart">
                     <h3 class="project-title">Shopping cart</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </a>
                 </div>
             </div>
