Add classes to header title and paragraph and give some padding..

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <img class="udacity-symbol" src="images/udacity.png" alt="Udacity symbol letter U">  
             </a>
             <div class="name">
-                <h1>Dita Rahmane</h1>
-                <p>Front-end developer</p>    
+                <h1 class="persons-name">Dita Rahmane</h1>
+                <p class="occupation-name">Front-end developer</p>    
             </div>
         </header> 
 
