--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         </header>
 
         <!-- Bigest image with the code -->
-        <div class="img-big">
-            <img class="img-big img-responsive" src="images/code.png" alt="Image with HTML code">
+        <div class="row">
+            <div class="col-md-12">
+               <img class="img-big img-responsive" src="images/code.png" alt="Image with HTML code"> 
+            </div>            
         </div>
 
         <!-- 3 smaller images with the links to the other projects -->
